--- a/304final.Rmd
+++ b/304final.Rmd
@@ -165,3 +165,4 @@ pie3D(slices, labels = lbls, explode = 0.35, main = "Pie Chart of Vote")
 
 - Rohan Alexander & Sam Caetano, (2020), gss_cleaning.R
 
+- Rexyizhouhu. “Rexyizhouhu/Problem_Set_3.” GitHub, github.com/rexyizhouhu/Problem_Set_3.git. 
